# DocTrace-AI

./: .env.example  .gitignore  Assignment_Approach_Document.md  Dockerfile  GEMINI.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  skills-lock.json
.agents/skills/documentation-standards/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260716_1120_ad00b6363ff1_initial_schema.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py  deps.py  errors.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: documents.py  generations.py  selections.py  versions.py
app/auth/: __init__.py  auth.py  circuit_breaker.py  dependencies.py  rate_limiter.py
app/core/: __init__.py  config.py  constants.py  logging.py  observability.py
app/domain/: __init__.py  entities.py  enums.py  exceptions.py
app/infrastructure/: __init__.py  database.py  logging.py  mongodb.py
app/llm/: __init__.py  base.py  openrouter.py  prompts.py  response_validator.py
app/models/: __init__.py  base.py  document.py  node.py  selection.py  version.py
app/parser/: __init__.py  content_hasher.py  heading_detector.py  hierarchy_builder.py  list_detector.py  pdf_parser.py  structure_extractor.py  table_extractor.py  types.py
app/repositories/: __init__.py  document.py  generation.py  node.py  selection.py  version.py
app/repositories/interfaces/: __init__.py  base.py  document.py  node.py  selection.py  version.py
app/schemas/: __init__.py  common.py  document.py  generation.py  node.py  selection.py  version.py
app/services/: __init__.py  document.py  generation.py  selection.py  version.py
app/versioning/: __init__.py  differ.py  matcher.py
data/: doctrace.db
docs/: README.md
docs/adr/: 0001-clean-architecture.md  0002-database-strategy.md  0003-llm-abstraction.md  0004-di-protocols.md  0005-pdf-parsing.md  0006-observability.md  0007-version-diff.md  0008-selection-generation.md  README.md
helm/doctrace-ai/: Chart.yaml  values.yaml
helm/doctrace-ai/templates/: _helpers.tpl  deployment.yaml  namespace.yaml  secrets.yaml  service.yaml
k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  secret.yaml  service.yaml  servicemonitor.yaml
scripts/: load_test.py
tests/: conftest.py  test_config.py
tests/test_api/: conftest.py  test_documents.py  test_generations.py  test_selections.py  test_versions.py
tests/test_domain/: test_entities.py  test_enums.py  test_exceptions.py
tests/test_infrastructure/: test_database.py  test_mongodb.py
tests/test_llm/: test_openrouter.py
tests/test_models/: __init__.py  test_orm_models.py
tests/test_parser/: __init__.py  fixtures.py  test_content_hasher.py  test_heading_detector.py  test_hierarchy_builder.py  test_list_detector.py  test_pdf_parser.py
tests/test_repositories/: conftest.py  test_document.py  test_generation.py  test_node.py  test_selection.py  test_version.py
tests/test_services/: conftest.py  test_document.py  test_generation.py  test_selection.py  test_version.py
tests/test_versioning/: test_differ.py  test_matcher.py
