[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doctrace-ai"
version = "0.1.0"
description = "AI-powered document tracing and QA test-case generation backend"
readme = "docs/README.md"

requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DocTrace AI" }]

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",   # multipart/form-data file uploads

    # Relational database
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",           # PostgreSQL async driver

    # NoSQL database
    "motor>=3.4.0",              # Async MongoDB driver (wraps pymongo)

    # PDF parsing
    "pdfplumber>=0.11.0",

    # LLM (OpenAI-compatible client — works with OpenRouter, Groq, etc.)
    "openai>=1.35.0",

    # Validation & configuration
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Structured logging
    "structlog>=24.2.0",

    # HTTP client (used in LLM client and tests)
    "httpx>=0.27.0",

    # Retry logic for LLM calls
    "tenacity>=8.3.0",

    # Async file I/O (for PDF temp-file handling)
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "anyio>=4.4.0",              # Async test backend for pytest-asyncio
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-aiofiles>=23.2.0",
]

# ──────────────────────────────────────────────────────────────────────────────
# Tool configuration
# ──────────────────────────────────────────────────────────────────────────────

[tool.hatch.build]
include = ["app/**"]


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E = pycodestyle errors, F = pyflakes, I = isort, N = naming, W = warnings,
# UP = pyupgrade, B = bugbear, S = bandit security, RUF = ruff-specific
select = ["E", "F", "I", "N", "W", "UP", "B", "RUF"]
ignore = [
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "S101",   # use of assert (used in tests)
    "RUF012", # mutable class attributes (SQLAlchemy Mapped types)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]  # Allow assert and hardcoded test secrets

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short --strict-markers"
markers = [
    "integration: marks tests that require a live database (deselect with -m 'not integration')",
    "slow: marks tests that take more than 1s",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[tool.coverage.run]
source = ["app"]
omit = ["app/infrastructure/logging.py", "alembic/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
