[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doctrace-ai"
version = "0.1.0"
description = "AI-powered document tracing and QA test-case generation backend"
readme = "README.md"

requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "DocTrace AI" }]

dependencies = [
    # ── Web framework ─────────────────────────────────────────────────────────
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",       # multipart/form-data file uploads

    # ── Relational database (SQLite via aiosqlite; swap URL for PostgreSQL) ───
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",             # Async SQLite driver for development

    # ── NoSQL (LLM generation results) ───────────────────────────────────────
    "motor>=3.4.0",                  # Async MongoDB driver

    # ── PDF parsing ───────────────────────────────────────────────────────────
    # PyMuPDF: primary parser (fast, preserves structure, font metadata)
    # pdfplumber: secondary, used only where it adds value (table extraction)
    "pymupdf>=1.24.0",
    "pdfplumber>=0.11.0",

    # ── LLM (OpenAI-compatible client — OpenRouter, OpenAI, Groq, …) ─────────
    "openai>=1.35.0",

    # ── Validation & configuration ────────────────────────────────────────────
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",

    # ── Structured logging ────────────────────────────────────────────────────
    "structlog>=24.2.0",

    # ── HTTP client (LLM client + tests) ─────────────────────────────────────
    "httpx>=0.27.0",

    # ── Retry logic (LLM calls) ───────────────────────────────────────────────
    "tenacity>=8.3.0",

    # ── Async file I/O (PDF temp-file handling) ───────────────────────────────
    "aiofiles>=23.2.0",

    # ── Observability (M13) ───────────────────────────────────────────────────
    "prometheus-client>=0.20.0",     # Prometheus metrics
    "opentelemetry-api>=1.27.0",     # OpenTelemetry API
    "opentelemetry-sdk>=1.27.0",     # OpenTelemetry SDK
    "opentelemetry-exporter-otlp>=1.27.0",  # OTLP exporter
    "opentelemetry-instrumentation-fastapi>=0.49b0",  # FastAPI instrumentation
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",  # SQLAlchemy instrumentation
    "opentelemetry-instrumentation-httpx>=0.49b0",  # httpx instrumentation

    # ── Authentication ────────────────────────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",  # JWT handling
    "passlib[bcrypt]>=1.7.4",            # Password hashing
    "redis>=5.0.0",                      # Redis for rate limiting + token blacklist
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "anyio>=4.4.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-aiofiles>=23.2.0",
]

# ─────────────────────────────────────────────────────────────────────────────
# Tool configuration
# ─────────────────────────────────────────────────────────────────────────────

[tool.hatch.build]
include = ["app/**"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "venv",
    "alembic",
    ".kilocode",
    ".claude",
    ".agents",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "RUF"]
ignore = [
    "B008",   # do not perform function calls in argument defaults (FastAPI Depends)
    "S101",   # use of assert (acceptable in tests)
    "RUF012", # mutable class attributes (SQLAlchemy Mapped types)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short --strict-markers"
markers = [
    "integration: marks tests requiring a live database (deselect with -m 'not integration')",
    "slow: marks tests taking more than 1 second",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[tool.coverage.run]
source = ["app"]
omit = ["alembic/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
